# HyperGaussians

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  index.html  metrics.py  pyproject.toml  render.py  test.py  train.py
.github/workflows/: static.yml
arguments/: __init__.py
flame/: __init__.py  flame_mica.py  lbs.py  mica_flame_config.py
flame/mediapipe/: landmarks.py
gaussian_renderer/: __init__.py  network_gui.py
hypergaussians/: __init__.py  hypergaussians.py
preprocessing/: organize.py  rvm.py  semantic.py
scene/: __init__.py  cameras.py  dataset.py  gaussian_model.py
src/: deform_model.py  hypergaussians.py  hypergaussians_deform_model.py
static/css/: index.css  twentytwenty.css
static/js/: jquery.twentytwenty.js
utils/: camera_utils.py  general_utils.py  graphics_utils.py  loss_utils.py  system_utils.py
